--- a/03-A-Preview-of-Data-Science-Tools/Exercise-01-Preview-of-Data-Science-Tools.ipynb
+++ b/03-A-Preview-of-Data-Science-Tools/Exercise-01-Preview-of-Data-Science-Tools.ipynb
@@ -31,7 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer goes here\n"
+    "# Your answer goes here\n",
+    "import numpy as np"
    ]
   },
   {
@@ -47,7 +48,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer goes here\n"
+    "# Your answer goes here\n",
+    "np_height_in = np.array(height_in)\n",
+    "np_weight_lb = np.array(weight_lb)"
    ]
   },
   {
@@ -74,7 +77,8 @@
     }
    ],
    "source": [
-    "# Your answer goes here\n"
+    "# Your answer goes here\n",
+    "type(np_weight_lb)"
    ]
   },
   {
@@ -115,18 +119,10 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1.8542 1.8796 1.8034 1.905  1.8796 1.8288 1.778  1.8034 1.7272 1.7526\n",
-      " 1.8288 1.8034]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Your answer goes here\n"
+    "# Your answer goes here\n",
+    "np_hieght_m = [i*2.54/100 for i in np_height_in]"
    ]
   },
   {
@@ -505,7 +501,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -519,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
